2010-01-21  Edward Nevill   <ed@camswl.com>

	* zeroshark.make, asm_helper.cpp, bytecodes_arm.def,
	cppInterpreter_arm.S, thumb2.cpp (new file)
	Added Thumb2 JIT (not build as default - yet)
	Removal of, more, hard coded constants
	Move 'complex' bytecodes from cppInterpreter_arm.S to asm_helper.cpp
	General tidying up of cppInterpreter_arm.S

2010-01-21  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am: Don't hide errors in statement sequences building
	the NPPlugin. Use ICEDTEA_REV to defined PLUGIN_VERSION.

2010-01-21  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Fix paths to patches and IcedTeaNPPlugin.cc
	for make dist.
	
2010-01-20  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Pass DERIVATIVE_ID and HOTSPOT_BUILD_VERSION
	to build (later only when the HotSpot Mercurial
	revision is available).
	(patch.stamp): Move revision derivation to configure.
	* acinclude.m4:
	(IT_GET_LSB_DATA): Report results.
	(IT_CHECK_FOR_MERCURIAL): Macro wrapper around check for hg.
	(IT_OBTAIN_HG_REVISIONS): Obtain Mercurial revisions for
	IcedTea, JDK and HotSpot if available.
	* configure.ac:
	Call new macros.
	* patches/icedtea-version-hotspot.patch:
	Updated to include DERIVATIVE_ID (IcedTea6 version)
	in the crash dump output.

2010-01-20  Xerxes Rånby  <xerxes@zafena.se>

	PR icedtea/431:
	* Makefile.am:
	Create a link from client to server after CACAO install
	to make openjdk find the expected client dir on 32bit systems.

2010-01-08  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Calculate JDK and HotSpot Mercurial revisions
	if available and pass to build.  Also pass
	DIST_NAME to build.
	* acinclude.m4:
	(IT_GET_LSB_DATA): Moved from configure.ac
	and extended to also obtain the name of
	the distribution from either lsb_release -is
	or $build_os.
	* configure.ac:
	Invoke IT_GET_LSB_DATA macro.
	* patches/icedtea-version.patch:
	Updated to use distribution name and JDK and
	HotSpot Mercurial revision IDs.
