@@ -1,3 +1,10 @@
+2010-01-21  Andrew John Hughes  <ahughes@redhat.com>
+
+	PR icedtea/433
+	* Makefile.am:
+	Add set -e to tarball extractions so
+	that they fail immediately.
+
 2010-01-21  Edward Nevill   <ed@camswl.com>
 
 	* zeroshark.make, asm_helper.cpp, bytecodes_arm.def,
